--- a/.gitignore
+++ b/.gitignore
@@ -2,10 +2,8 @@
 __pycache__/
 *.py[cod]
 *$py.class
-
-# Jupyter Notebook
 .ipynb_checkpoints
-
-# IPython
 profile_default/
 ipython_config.py
+checkPoint.pth
+flowers/
